# ouroboros-engine

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  Directory.Build.props  Directory.Build.targets  LICENSE  Ouroboros.Engine.slnx  README.md  engine-coverage.cobertura.xml  ouroboros-engine-coverage.json  ouroboros-engine-tests.json  print-props.proj  pyproject.toml
src/Ouroboros.Tensor/: Dockerfile  GlobalUsings.cs  Ouroboros.Tensor.csproj  pyproject.toml  requirements.txt  tensor_service.py
src/Ouroboros.Tensor/Abstractions/: CameraParams.cs  DeviceType.cs  FrameBuffer.cs  GaussianSet.cs  IGaussianRasterizer.cs  IHandleAwareVectorStore.cs  IOnnxExecutionProvider.cs  IRasterizerVramMonitor.cs  ISharedOrtDmlSessionFactory.cs  ITensor.cs  ITensorBackend.cs  ITensorBackendSelector.cs  IVramLayout.cs  IVramLayoutProvider.cs  RasterizerRequirements.cs  TensorShape.cs  VramBucket.cs  VramBucketBudget.cs  VramLayout.cs
src/Ouroboros.Tensor/Adapters/: AffectiveVector.cs  FerClassMapping.cs  IExpressionClassifier.cs  IFaceDetector.cs  IFaceEmbedder.cs  IGazeEstimator.cs  IPoseEstimator.cs  MeTTaToTensorAdapter.cs  MobileGazeOnnxEstimator.cs  MoveNetOnnxPoseEstimator.cs  OnnxExpressionClassifier.cs  QdrantHandleAwareVectorStore.cs  SFaceOnnxEmbedder.cs  StreamingTensorAdapter.cs  StubExpressionClassifier.cs  StubFaceDetector.cs  StubFaceEmbedder.cs  StubGazeEstimator.cs  StubPoseEstimator.cs  TensorToBackendAdapter.cs  VectorToTensorAdapter.cs  YuNetOnnxFaceDetector.cs
src/Ouroboros.Tensor/Backends/: CpuTensorBackend.cs  DefaultBackendSelector.cs  GpuTensorBackend.cs  (+7 more)
(+2562 files in other folders)
